--- a/package.json
+++ b/package.json
@@ -5,11 +5,6 @@
     "main": "build/index.js",
     "author": "tech4Covid",
     "license": "MIT",
-    "homepage": "https://github.com/TiagoFilipeSousaGoncalves/telementoring-backend#readme",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/TiagoFilipeSousaGoncalves/telementoring-backend.git"
-    },
     "engines": {
         "node": ">=12.14.1"
     },
@@ -42,6 +37,11 @@
         "typescript": "^3.8.3"
     },
     "dependencies": {
-        "@hapi/hapi": "^19.1.1"
+        "@hapi/hapi": "^19.1.1",
+        "@hapi/inert": "^6.0.1",
+        "@hapi/vision": "^6.0.0",
+        "@types/hapi__inert": "^5.2.0",
+        "@types/hapi__vision": "^5.5.1",
+        "hapi-swagger": "^12.1.3"
     }
 }
