added build folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -275,3 +275,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/node,linux,macos,windows,intellij+all,visualstudiocode
+
+# Generated code
+build/
