--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
         "@hapi/vision": "^6.0.0",
         "@types/hapi__inert": "^5.2.0",
         "@types/hapi__vision": "^5.5.1",
-        "hapi-swagger": "^12.1.3"
+        "hapi-swagger": "^12.1.3",
+        "mysql2": "^2.1.0",
+        "reflect-metadata": "^0.1.13",
+        "typeorm": "^0.2.24"
     }
 }
